Version 2.0.0
> Introducing The Mox!
	- Preferring smart weapons and stun batons, they will now claim the Kabuki area as their turf.
	- You probably won't see them often unless you have Night City Alive installed.
	- Added 8 new Moxies units to support this feature.
	- (sometimes a Mox will spawn and use the appearance of Rita Wheeler. This is not on purpose, I might change it, I might not)
> NCPD turf changes
	- Under political pressure and threats of further funding cuts from wealthy voters and coporations alike, NCPD have bolstered their presence in:
	- City Center, Charter Hill
> NCPD elite units rework
	- Maxtac are no longer spawned by this mod, and have been replaced with custom NCPD elites bearing heavy weapons.
	- Added 5 new Elite NCPD responders to support this rework.
	- Units come equipped with Crusher, Ajax, Kolac, HMG, Gorilla Arms
	- NCPD elite units now drive the NCPD Thorton Merrimac, instead of the Maxtac Hellhound.
	- This lets Maxtac remain the big bad who respond to the only cyberpsycho in town (you, apparently), and not ruin any illusions of their power in Night City
> Gangs can now be disabled in settings
> Aggression Improvements
	- Reinforcements are now more aggressive when they arrive
	- Before, they would quietly arrive, get out of their cars, and then start fighting
	- Now they are already in combat as they approach the scene. Way more fun!

Version 1.5.1
> remove logging calls

Version 1.5.0
> Add new preset modes for easy configuration
> Balance pass on spawn rates overall
> Fix a bug that caused far too many spawns
> Police Sirens work when arriving (sometimes)

Version 1.0.3
> fix incorrect vehicle record in NCPD tweak data

Version 1.0.2
> reviewed and updated all settings localisations

Version 1.0.1
> update jp-jp localisation, thanks to KeiSagano <3

Version 1.0.0
> hiya