@@ -6,16 +6,26 @@ import Gibbon.GR.Logging.*
 @wrapMethod(ReactionManagerComponent)
 protected final func HandleStimEvent(stimData: ref<StimEventTaskData>) -> Void {
 	wrappedMethod(stimData);
-    
+
+	//potential edge case
+	if(Equals(stimData.cachedEvt.stimType, gamedataStimType.Dying)) {
+		return;
+	}
+
 	let reinSystem: wref<GRReinforcementSystem> = GRReinforcementSystem.GetInstance(GetGameInstance());
 	if (reinSystem.m_settings.enabled) {
     	let ownerPuppet: ref<ScriptedPuppet>;
 
 		ownerPuppet = this.GetOwnerPuppet();
 
-        if(!NPCPuppet.IsInCombatWithTarget(ownerPuppet, stimData.cachedEvt.sourceObject)) {
+		
+        if( NPCPuppet.IsInCombatWithTarget(ownerPuppet, GetPlayer(GetGameInstance()))
+		|| !NPCPuppet.IsInCombatWithTarget(ownerPuppet, stimData.cachedEvt.sourceObject) 
+		|| !ScriptedPuppet.IsActive(ownerPuppet) 
+		|| !ScriptedPuppet.IsActive(stimData.cachedEvt.sourceObject)) {
             return;
         }
+
 		reinSystem.TryCallingReinforcements(ownerPuppet, stimData.cachedEvt.sourceObject);
 	}
 }
