@@ -26,7 +26,8 @@ protected final func GRAttitudeFix(caller: wref<GameObject>, target: wref<GameOb
     let callerAttitudeAgent: ref<AttitudeAgent>;
     let targetAttitudeAgent: ref<AttitudeAgent>;
     let callerSquadMembers: array<wref<Entity>>;
-    if (!IsDefined(this) || !IsDefined(caller) || !IsDefined(target)) {
+    if (!IsDefined(this) 
+		|| (!IsDefined(caller) || ScriptedPuppet.IsActive(caller))) {
         return false;
     };
     ownerAttitudeAgent = this.GetAttitudeAgent();
@@ -38,28 +39,20 @@ protected final func GRAttitudeFix(caller: wref<GameObject>, target: wref<GameOb
     if AISquadHelper.GetSquadmates(caller as ScriptedPuppet, callerSquadMembers) {
         i = 0;
         while i < ArraySize(callerSquadMembers) {
-        currentSquadMate = callerSquadMembers[i] as GameObject;
-        if !IsDefined(currentSquadMate) || currentSquadMate == this {
-        } else {
-            //GRLog(s"Attitude Fix: \(TDBID.ToStringDEBUG(GameObject.GetTDBID(this))) -> Friendly with \(TDBID.ToStringDEBUG(GameObject.GetTDBID(currentSquadMate)))");
-            ownerAttitudeAgent.SetAttitudeTowards(currentSquadMate.GetAttitudeAgent(), EAIAttitude.AIA_Friendly);
-            
-            //GRLog(s"Attitude Fix: \(TDBID.ToStringDEBUG(GameObject.GetTDBID(currentSquadMate))) -> Friendly with \(TDBID.ToStringDEBUG(GameObject.GetTDBID(this)))");
-            currentSquadMate.GetAttitudeAgent().SetAttitudeTowards(ownerAttitudeAgent, EAIAttitude.AIA_Friendly);
-            
-            //GRLog(s"Attitude Fix: \(TDBID.ToStringDEBUG(GameObject.GetTDBID(currentSquadMate))) -> Hostile with \(TDBID.ToStringDEBUG(GameObject.GetTDBID(target)))");
-            currentSquadMate.GetAttitudeAgent().SetAttitudeTowards(targetAttitudeAgent, EAIAttitude.AIA_Hostile);
-        };
-        i += 1;
+			currentSquadMate = callerSquadMembers[i] as GameObject;
+			if !IsDefined(currentSquadMate) || currentSquadMate == this {
+			} else {
+				ownerAttitudeAgent.SetAttitudeTowards(currentSquadMate.GetAttitudeAgent(), EAIAttitude.AIA_Friendly);
+				currentSquadMate.GetAttitudeAgent().SetAttitudeTowards(ownerAttitudeAgent, EAIAttitude.AIA_Friendly);
+				if (ScriptedPuppet.IsActive(target)) {
+					currentSquadMate.GetAttitudeAgent().SetAttitudeTowards(targetAttitudeAgent, EAIAttitude.AIA_Hostile);
+				}
+			};
+			i += 1;
         };
     };
-    //GRLog(s"Attitude Fix: \(TDBID.ToStringDEBUG(GameObject.GetTDBID(this))) -> Set attitude group to \(TDBID.ToStringDEBUG(GameObject.GetTDBID(caller)))");
     ownerAttitudeAgent.SetAttitudeGroup(callerAttitudeAgent.GetAttitudeGroup());
-    
-    //GRLog(s"Attitude Fix: \(TDBID.ToStringDEBUG(GameObject.GetTDBID(this))) -> Friendly with \(TDBID.ToStringDEBUG(GameObject.GetTDBID(caller)))");
     ownerAttitudeAgent.SetAttitudeTowards(callerAttitudeAgent, EAIAttitude.AIA_Friendly);
-    
-    //GRLog(s"Attitude Fix: \(TDBID.ToStringDEBUG(GameObject.GetTDBID(caller))) -> Friendly with \(TDBID.ToStringDEBUG(GameObject.GetTDBID(this)))");
     callerAttitudeAgent.SetAttitudeTowards(ownerAttitudeAgent, EAIAttitude.AIA_Friendly);
     return true;
 }
